fixed bogus css alignment

--- a/src/components/IndividualEditor.css
+++ b/src/components/IndividualEditor.css
@@ -6,7 +6,7 @@
 /* .tabResourceSelector .MuiListItemText-root-157:not(:last-of-type) { text-align:right; } */
 /* .tabResourceSelector .MuiListItemText-root-157 + .MuiListItemText-root-157 { text-align:left; } */
 .tabResourceSelector .individualView .prefLabel { flex: 10 1 auto ; margin-left:10px; }
-.tabResourceSelector .individualView ul li > :first-child { flex: 1 10 auto ; text-align:right; }
+.tabResourceSelector .individualView ul li > :first-child { flex: 1 10 auto ;  text-align:left; }
 
 .inDivHeading { display:flex; align-items: center; justify-content: space-between; width:100%; }
 .inDivHeading > div:last-child { margin:0 15px; font-size:20px; text-align:right; }
